--- a/index.html
+++ b/index.html
@@ -27,10 +27,7 @@
       <h1>Jose M. Rodríguez</h1>
       <section>
         <p>
-          Hello! I am Jose M. Rodríguez. I work as interface and front-end
-          developer. I have passion for pixel perfect, minimal and easy to use
-          interfaces. I'm focused, dedicated, hard-working and willing to learn
-          in a changing and challenging environment.
+          Hello! I am Jose M. Rodríguez. I am a Full Stack Developer, who can work as a Front-End and Back-end Developer. I am passionate about programming in all its aspects as well as Cybersecurity. I am focused, dedicated, hard-working and willing to learn in a changing and challenging environment.
         </p>
         
         
