--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </header>
     <main>
       <section>
-        <h3>Courses & Certifications</h3>
+        <h3>Some of my Courses & Certifications</h3>
         <article class="course">
           <div class="title">
             <h4>Udacity: Intro to HTML and CSS</h4>
