--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
         <h3>Some of my Courses & Certifications</h3>
         <article class="course">
           <div class="title">
-            <h4>Udacity: Intro to HTML and CSS</h4>
+            <h4>Full Stack DeveloperFull Stack Developer
+              4Geeks Academy España</h4>
           </div>
           <div class="descrition">
             <p>
