--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <h3>Some of my Courses & Certifications</h3>
         <article class="course">
           <div class="title">
-            <h4>4Geeks Academy España: </h4>
+            <h4>4Geeks Academy España: Full Stack Developer</h4>
           </div>
           <div class="descrition">
             <p>
