--- a/index.html
+++ b/index.html
@@ -52,9 +52,8 @@
           </div>
           <div class="descrition">
             <p>
-              Build styled, well-structured websites. Learn how to use HTML5
-              standard to create websites. Understand CSS syntax, selectors, and
-              units. Learn about code editors and a browser's Developer Tools.
+              In this Bootcamp I trained as a Full Stack Developer. I learned how to create a website by immersing myself in the best practices of responsive web design, working with various languages. I obtained a solid foundation in frontend, backend, database and deployment on web platforms.
+At the end of this program I expanded my knowledge to join the technology sector as a Full Stack Developer.
             </p>
           </div>
         </article>
