--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ At the end of this program I expanded my knowledge to join the technology sector
         </article>
         <article class="course">
           <div class="title">
-            <h4>Udemy: The Web Developer Bootcamp</h4>
+            <h4>FreeCodeCamp: Responsive Web Design</h4>
           </div>
           <div class="descrition">
             <p>
