--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@ At the end of this program I expanded my knowledge to join the technology sector
           </div>
           <div class="descrition">
             <p>
-              Learn how to create full-stack web applications from scratch using
-              HTML, CSS, JavaScript, jQuery, VanillaJS, NodeJS, MongoDB.
+              In this Responsive Web Design Certification, I learned the languages that developers use to build web pages: HTML for content, and CSS for design.
+I learned how to make web pages responsive to different screen sizes.
             </p>
           </div>
         </article>
