--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ I learned how to make web pages responsive to different screen sizes.
         </article>
         <article class="course">
           <div class="title">
-            <h4>EdX: Web Programming with JavaScript</h4>
+            <h4>Codecademy: Courses</h4>
           </div>
           <div class="descrition">
             <p>
