--- a/index.html
+++ b/index.html
@@ -82,12 +82,11 @@ I learned how to make web pages responsive to different screen sizes.
         </article>
         <article class="course">
           <div class="title">
-            <h4>Django Girls: 2-Day Workshops</h4>
+            <h4>Cybersecurity: ------------</h4>
           </div>
           <div class="descrition">
             <p>
-              Learn back-end development with simple blog application using
-              Django framework.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque necessitatibus libero facere, ab explicabo ipsam nisi maxime impedit voluptates at accusantium quas, itaque minus cum? Laboriosam reiciendis maxime saepe voluptatum!
             </p>
           </div>
         </article>
