--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>CV - Jose M. Rodríguez</title>
-    <meta
-      name="description"
-      content="simple CV created with HTML and CSS"
-    />
+    <meta name="description" content="simple CV created with HTML and CSS" />
     <meta name="author" content="Fly Nerd" />
     <link rel="icon" href="./img/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -52,8 +49,13 @@
           </div>
           <div class="descrition">
             <p>
-              In this Bootcamp I trained as a Full Stack Developer. I learned how to create a website by immersing myself in the best practices of responsive web design, working with various languages. I obtained a solid foundation in frontend, backend, database and deployment on web platforms.
-At the end of this program I expanded my knowledge to join the technology sector as a Full Stack Developer.
+              In this Bootcamp I trained as a Full Stack Developer. I learned
+              how to create a website by immersing myself in the best practices
+              of responsive web design, working with various languages. I
+              obtained a solid foundation in frontend, backend, database and
+              deployment on web platforms. At the end of this program I expanded
+              my knowledge to join the technology sector as a Full Stack
+              Developer.
             </p>
           </div>
         </article>
@@ -63,8 +65,10 @@ At the end of this program I expanded my knowledge to join the technology sector
           </div>
           <div class="descrition">
             <p>
-              In this Responsive Web Design Certification, I learned the languages that developers use to build web pages: HTML for content, and CSS for design.
-I learned how to make web pages responsive to different screen sizes.
+              In this Responsive Web Design Certification, I learned the
+              languages that developers use to build web pages: HTML for
+              content, and CSS for design. I learned how to make web pages
+              responsive to different screen sizes.
             </p>
           </div>
         </article>
@@ -86,7 +90,10 @@ I learned how to make web pages responsive to different screen sizes.
           </div>
           <div class="descrition">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque necessitatibus libero facere, ab explicabo ipsam nisi maxime impedit voluptates at accusantium quas, itaque minus cum? Laboriosam reiciendis maxime saepe voluptatum!
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
+              necessitatibus libero facere, ab explicabo ipsam nisi maxime
+              impedit voluptates at accusantium quas, itaque minus cum?
+              Laboriosam reiciendis maxime saepe voluptatum!
             </p>
           </div>
         </article>
@@ -114,7 +121,6 @@ I learned how to make web pages responsive to different screen sizes.
           </div>
           <div>
             <h4>Languages</h4>
-            
             <p>🇪🇸 Spanish - Intermediate - B1/B2</p>
             <p>🇬🇧 English - Proficient C1/C2</p>
           </div>
