--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           </div>
           <div>
             <h4>Languages</h4>
-            <p>🇪🇸 Spanish - Intermediate - B1/B2</p>
+            <p>🇪🇸 Spanish - Native</p>
             <p>🇬🇧 English - Proficient C1/C2</p>
           </div>
         </div>
