--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           <div>
             <h4>Languages</h4>
             <p>🇪🇸 Spanish - Native</p>
-            <p>🇬🇧 English - Proficient C1/C2</p>
+            <p>🇬🇧 English - B1: Intermediate/B2: Intermediate-High</p>
           </div>
         </div>
       </section>
