--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           </div>
           <div class="descrition">
             <p>
-              
+              With Codecademy I have learned and continue to learn about different programming languages, including the most in-demand in the world, Frameworks, Libraries and much more.
             </p>
           </div>
         </article>
