--- a/index.html
+++ b/index.html
@@ -74,11 +74,13 @@
         </article>
         <article class="course">
           <div class="title">
-            <h4>Codecademy: Courses</h4>
+            <h4>Codecademy: Courses and Career Paths</h4>
           </div>
           <div class="descrition">
             <p>
-              With Codecademy I have learned and continue to learn about different programming languages, including the most in-demand in the world, Frameworks, Libraries and much more.
+              With Codecademy I have learned and continue to learn about
+              different programming languages, including the most in-demand in
+              the world, Frameworks, Libraries and much more...
             </p>
           </div>
         </article>
