--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </article>
         <article class="course">
           <div class="title">
-            <h4>FreeCodeCamp: Responsive Web Design</h4>
+            <h4>FreeCodeCamp: Responsive Web Design (And more)</h4>
           </div>
           <div class="descrition">
             <p>
