--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </article>
         <article class="course">
           <div class="title">
-            <h4>Cybersecurity: ------------</h4>
+            <h4>Cybersecurity: -----------</h4>
           </div>
           <div class="descrition">
             <p>
