--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           <div class="column">
             <h4>Basic knowledge</h4>
             <ul>
-              <li>jQuery</li>
+              <li>SQL</li>
               <li>NodeJS</li>
               <li>MongoDB</li>
               <li>Django</li>
