--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
             <ul>
               <li>HTML5</li>
               <li>CSS</li>
-              <li>JavaScript ES5/6</li>
-              <li>SQL</li>
+              <li>JavaScript</li>
+              <li>Python</li>
             </ul>
           </div>
           <div class="column">
