--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <article>
           <div class="school">
             <span>2012-2015</span>
-            <strong>Underwater kittens high school</strong>
+            <strong>Kittens high school</strong>
           </div>
           <div>Main subject: Cathemathics</div>
         </article>
