--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
     </main>
     <footer>
       <p>
-        Created by: <a href="https://www.flynerd.pl/">@flynerd</a> /
-        <a href="https://www.linkedin.com/in/ritalyczywek/">LinkedIn</a> / 2018
+        Created by: <a href="https://www.flynerd.pl/">JoseGeek</a> /
+        <a href="https://www.linkedin.com/in/jose-maria-rodriguez-muñoz/">LinkedIn</a> / 2018
       </p>
     </footer>
   </body>
