--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <ul class="job-description">
               <li>Develop web application for Octopoda departments</li>
               <li>
-                Implement UI (front-end site) based on received graphic design
+                Implement UI (front-end site) based  received graphic design
                 and requirements
               </li>
               <li>Co-operate with  back-end team</li>
