--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 Implement UI (front-end site) based  received graphic design
                 and requirements
               </li>
-              <li>Co-operate with  back-end team</li>
+              <li>Co-operate back-end team</li>
             </ul>
           </div>
         </article>
