--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
               necessitatibus libero facere, explicabo ipsam nisi maxime
               impedit voluptates at accusantium quas, itaque minus cum?
-              Laboriosam reiciendis maxime saepe voluptatum!
+              Laboriosam reiciendis max saepe voluptatum!
             </p>
           </div>
         </article>
