--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <div class="descrition">
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
-              necessitatibus libero facere, explicabo ipsam nisi maxime
+              necessitatibus  facere, explicabo ipsam nisi maxime
               impedit voluptates at accusantium quas, itaque minus cum?
               Laboriosam reiciendis max saepe voluptatum!
             </p>
