--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
               necessitatibus  facere, explicabo ipsam nisi maxime
-              impedit voluptates at accusantium quas, itaque minus cum?
+              impedit voluptates at accusantium, itaque minus cum?
               Laboriosam reiciendis max saepe voluptatum!
             </p>
           </div>
