--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <div class="descrition">
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
-              necessitatibusfacere, explicabo ipsam nisi maxime
+              necessitatifacere, explicabo ipsam nisi maxime
               impedit voluptate holi accusantium, itaque minus cum!
               Laboriosam reiciendis max saepe voluptatum!
             </p>
