--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
               necessitatifacere, explicabo ipsam maxime
-              impedit voluptate holi accusantium, itaque minus cum!
+              impedit voluptate Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure possimus tempora esse voluptatibus nihil quibusdam, non expedita a alias facere commodi quas, ex consectetur distinctio deserunt sequi ratione delectus cumque. holi accusantium, itaque minus cum!
               Laboriosam reiciendis max saepe voluptatum!
             </p>
           </div>
