--- a/index.html
+++ b/index.html
@@ -91,9 +91,11 @@
           <div class="descrition">
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
-              necessitatifacere, explicabo ipsam maxime
-              impedit voluptate Lorem ipsum dolor sit, amet consectetur adipisicing elit quas, ex consectetur distinctio deserunt sequi ratione delectus cumque. holi accusantium, itaque minus cum!
-              Laboriosam reiciendis max saepe voluptatum!
+              necessitatifacere, explicabo ipsam maxime impedit voluptate Lorem
+              ipsum dolor sit, amet consectetur adipisicing quas, ex
+              consectetur distinctio deserunt sequi ratione delectus cumque.
+              holi accusantium, itaque minus cum! Laboriosam reiciendis max
+              saepe voluptatum!
             </p>
           </div>
         </article>
@@ -158,8 +160,8 @@
             <ul class="job-description">
               <li>Develop web application for Octopoda departments</li>
               <li>
-                Implement UI (front-end site) based  received graphic design
-                and requirements
+                Implement UI (front-end site) based received graphic design and
+                requirements
               </li>
               <li>Co-operate back-end team</li>
             </ul>
@@ -170,7 +172,10 @@
     <footer>
       <p>
         Created by: <a href="https://www.flynerd.pl/">JoseGeek</a> /
-        <a href="https://www.linkedin.com/in/jose-maria-rodriguez-muñoz/">LinkedIn</a> / 2024
+        <a href="https://www.linkedin.com/in/jose-maria-rodriguez-muñoz/"
+          >LinkedIn</a
+        >
+        / 2024
       </p>
     </footer>
   </body>
