--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
               necessitatifacere, explicabo ipsam maxime impedit voluptate Lorem
-              ipsum dolor, amet consectetur adipisicing quas, ex
+              ipsum dolor, amet consectetur quas, ex
               consectetur distinctio deserunt sequi ratione delectus cumque.
               holi accusantium, itaque minus cum! Laboriosam reiciendis max
               saepe voluptatum!
