--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <div class="descrition">
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
-              necessitatifacere, explicabo ipsam maxime impedit voluptate Lorem
+              necessitatifacere, explicab ipsam maxime impedit voluptate Lorem
               ipsum dolor, amet consectetur quas, ex
               consectetur distinctio deserunt sequi ratione delectus cumque.
               holi accusantium, itaque minus cum! Laboriosam reiciendis max
