--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
               necessitatifacere, explicab ipsam maxime impedit voluptate Lorem
               ipsum dolor, amet consectetur quas, ex
-              consectetur distincti deserunt sequi ratione delectus cumque.
+              consectetur distinci deserunt sequi ratione delectus cumque.
               holi accusantium, itaque minus cum! Laboriosam reiciendis max
               saepe voluptatum!
             </p>
