--- a/index.html
+++ b/index.html
@@ -24,11 +24,7 @@
       <h1>Jose M. Rodríguez</h1>
       <section>
         <p>
-          Hello! I am Jose M. Rodríguez. I am a Full Stack Developer, who can
-          work as a Front-End and Back-end Developer. I am passionate about
-          programming in all its aspects as well as Cybersecurity. I am focused,
-          dedicated, hard-working and willing to learn in a changing and
-          challenging environment.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur necessitatibus magni corrupti cupiditate veniam error soluta harum fugiat. Laudantium aut ipsum impedit! Itaque doloremque consequuntur cupiditate magni voluptates? Esse, dolor!
         </p>
 
         <a href="https://github.com/" target="_blank">
