--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
       <h1>Jose M. Rodríguez</h1>
       <section>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur necessitatibus magni corrupti cupiditate veniam error soluta harum fugiat. Laudantium aut ipsum impedit! Itaque doloremque consequuntur cupiditate magni voluptates? Esse, dolor!
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur
+          necessitatibus magni corrupti cupiditate veniam error soluta harum
+          fugiat. Laudantium aut ipsum impedit! Itaque doloremque consequuntur
+          cupiditate magni voluptates? Esse!
         </p>
 
         <a href="https://github.com/" target="_blank">
@@ -88,10 +91,9 @@
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
               necessitatifacere, explicab ipsam maxime impedit voluptate Lorem
-              ipsum dolor, amet consectetur quas, ex
-              consectetur distinci deserunt sequi ratione delectus cumque.
-              holi accusantium, itaque minus cum! Laboriosam reiciendis max
-              saepe voluptatum!
+              ipsum dolor, amet consectetur quas, ex consectetur distinci
+              deserunt sequi ratione delectus cumque. holi accusantium, itaque
+              minus cum! Laboriosam reiciendis max saepe voluptatum!
             </p>
           </div>
         </article>
