--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur
           necessitatibus magni corrupti cupiditate veniam error soluta harum
-          fugiat. Laudantium aut ipsum impedit! Itaque doloremque consequuntur
+          fugiat. Laudantium ipsum impedit! Itaque doloremque consequuntur
           cupiditate magni voluptates? Esse!
         </p>
 
