--- a/index.html
+++ b/index.html
@@ -48,13 +48,7 @@
           </div>
           <div class="descrition">
             <p>
-              In this Bootcamp I trained as a Full Stack Developer. I learned
-              how to create a website by immersing myself in the best practices
-              of responsive web design, working with various languages. I
-              obtained a solid foundation in frontend, backend, database and
-              deployment on web platforms. At the end of this program I expanded
-              my knowledge to join the technology sector as a Full Stack
-              Developer.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, laudantium. Eveniet veniam repellat eos vero. Nisi consequatur similique earum nulla optio, magnam impedit temporibus eos vitae, eum voluptatem. Praesentium, quia!
             </p>
           </div>
         </article>
