--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
           </div>
           <div class="descrition">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, laudantium. Eveniet veniam repellat eos vero. Nisi consequatur similique earum nulla optio, magnam impedit temporibus eos vitae, eum voluptatem. Praesentium, quia!
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur,
+              laudantium. Eveniet veniam repellat eos vero. Nisi consequatur
+              similique earum pppnulla optio, magnam impedit temporibus eos vitae,
+              eum voluptatem. Praesentium, quia!
             </p>
           </div>
         </article>
