--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur,
               laudantium. Eveniet veniam repellat eos vero. Nisi consequatur
-              similique earum pppnulla optio, magnam impedit temporibus eos vitae,
-              eum voluptatem. Praesentium, quia!
+              similique earum pppnulla optio, magnam impedit temporibus eos
+              vitae, eum voluptatem. Praesentium, quia!
             </p>
           </div>
         </article>
@@ -61,10 +61,10 @@
           </div>
           <div class="descrition">
             <p>
-              In this Responsive Web Design Certification, I learned the
-              languages that developers use to build web pages: HTML for
-              content, and CSS for design. I learned how to make web pages
-              responsive to different screen sizes.
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sapiente
+              laboriosam modi nemo alias ea veniam molestias aspernatur odio
+              minima quisquam quia iste inventore tempore, debitis sint
+              eligendi! Est, sit.
             </p>
           </div>
         </article>
