--- a/index.html
+++ b/index.html
@@ -74,9 +74,10 @@
           </div>
           <div class="descrition">
             <p>
-              With Codecademy I have learned and continue to learn about
-              different programming languages, including the most in-demand in
-              the world, Frameworks, Libraries and much more...
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque
+              corrupti voluptate culpa tempora molestiae esse quidem, dicta
+              reprehenderit amet cum impedit, quas, reiciendis possimus
+              doloribus eaque enim. Tempora, possimus suscipit!
             </p>
           </div>
         </article>
