--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque
               corrupti voluptate culpa tempora molestiae esse quidem, dicta
               reprehenderit amet cum impedit, quas, reiciendis possimus
-              doloribus eaque enim. Tempora, possimus suscipit!
+              doloribus eaqueee enim. Tempora, possimus suscipit!
             </p>
           </div>
         </article>
