--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <p>
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque
               corrupti voluptate culpa tempora molestiae esse quidem, dicta
-              reprehenderit amet cum impedit, quas, reiciendis possimus
+              reprehenderit samet cum impedit, quas, reiciendis possimus
               doloribus eaqueee enim. Tempora, possimus suscipit!
             </p>
           </div>
