--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
       <h1>Jose M. Rodríguez</h1>
       <section>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur
-          necessitatibus magni corrupti cupiditate veniam error soluta harum
-          fugiat. Laudantium ipsum impedit! Itaque doloremque consequuntur
-          cupiditate magni voluptates? Esse!
+        Hola! Soy Jose, bienvenido a mi cv online únicamente enfocado en ciberseguridad, que iré actualizando según vaya adquiriendo más experiencia y conocimientos. <br> Empecé en serio en este fascinante mundo en enero de 2023 gracias a Cisco Networking Academy, un recurso gratuito que siempre recomendaré.
         </p>
 
         <a href="https://github.com/" target="_blank">
