--- a/index.html
+++ b/index.html
@@ -24,7 +24,14 @@
       <h1>Jose M. Rodríguez</h1>
       <section>
         <p>
-        Hola! Soy Jose, bienvenido a mi cv online únicamente enfocado en ciberseguridad, que iré actualizando según vaya adquiriendo más experiencia y conocimientos. <br> Empecé en serio en este fascinante mundo en enero de 2023 gracias a Cisco Networking Academy, un recurso gratuito que siempre recomendaré. <br> Desde entonces no he parado de estudiar y aprender con la ayuda de otros como Cybrary, TryHackMe, ISC2...
+          Hola! Soy Jose, bienvenido a mi cv online únicamente enfocado en
+          ciberseguridad, que iré actualizando según vaya adquiriendo más
+          experiencia y conocimientos. <br />
+          Empecé en serio en este fascinante mundo en enero de 2023 gracias a
+          Cisco Networking Academy, un recurso gratuito que siempre recomendaré.
+          <br />
+          Desde entonces no he parado de estudiar y aprender con la ayuda de
+          otros como Cybrary, TryHackMe, ISC2...
         </p>
 
         <a href="https://github.com/" target="_blank">
