--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
     </header>
     <main>
       <section>
-        <h3>Some of my Courses & Certifications</h3>
+        <h3>Algunos de mis cursos y certificaciones</h3>
         <article class="course">
           <div class="title">
-            <h4>4Geeks Academy: Full Stack Developer</h4>
+            <h4>Analista Junior en Ciberseguridad // Cisco Networking Academy</h4>
           </div>
           <div class="descrition">
             <p>
@@ -61,7 +61,7 @@
         </article>
         <article class="course">
           <div class="title">
-            <h4>FreeCodeCamp: Responsive Web Design (And more)</h4>
+            <h4>SOC Level 1 // TryHackMe</h4>
           </div>
           <div class="descrition">
             <p>
@@ -71,14 +71,25 @@
               eligendi! Est, sit.
             </p>
           </div>
-        </article>
-        <article class="course">
           <div class="title">
-            <h4>Codecademy: Courses and Career Paths</h4>
+            <h4>SOC Leve 1 // Cybrary</h4>
           </div>
           <div class="descrition">
             <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque
+              En Formación...Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur,
+              laudantium. Eveniet veniam repellat eos vero. Nisi consequatur
+              similique earum pppnulla optio, magnam impedit temporibus eos
+              vitae, eum voluptatem. Praesentium, quia!
+            </p>
+          </div>
+        </article>
+        <article class="course">
+          <div class="title">
+            <h4>Certified in Cybersecurity // ISC2</h4>
+          </div>
+          <div class="descrition">
+            <p>
+              Preparando el examen...Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque
               corrupti voluptate culpa tempora molestiae esse quidem, dicta
               reprehenderit samet cum impedit, quas, reiciendis possimus
               doloribus eaqueee enim. Tempora, possimus suscipit!
@@ -87,7 +98,7 @@
         </article>
         <article class="course">
           <div class="title">
-            <h4>Cybersecurity: -----------</h4>
+            <h4>4Geeks Academy</h4>
           </div>
           <div class="descrition">
             <p>
