--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </p>
           </div>
           <div class="title">
-            <h4>SOC Leve 1 // Cybrary</h4>
+            <h4>SOC Level 1 // Cybrary</h4>
           </div>
           <div class="descrition">
             <p>
@@ -93,6 +93,22 @@
               corrupti voluptate culpa tempora molestiae esse quidem, dicta
               reprehenderit samet cum impedit, quas, reiciendis possimus
               doloribus eaqueee enim. Tempora, possimus suscipit!
+            </p>
+          </div>
+        </article>
+
+
+        <article class="course">
+          <div class="title">
+            <h4>Fundamentos de Python 1 // Cisco Networking Academy</h4>
+          </div>
+          <div class="descrition">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
+              necessitatifacere, explicab ipsam maxime impedit voluptate Lorem
+              ipsum dolor, amet consectetur quas, ex consectetur distinci
+              deserunt sequi ratione delectus cumque. holi accusantium, itaque
+              minus cum! Laboriosam reiciendis max saepe voluptatum!
             </p>
           </div>
         </article>
