--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           Cisco Networking Academy, un recurso gratuito que siempre recomendaré.
           <br />
           Desde entonces no he parado de estudiar y aprender con la ayuda de
-          otros como Cybrary, TryHackMe, ISC2...
+          otros como Cybrary, TryHackMe, ISC2... <br /> Esta web hecha con mis conocimientos en programación está en construcción, le dedico más tiempo a formarme que a actualizarla, disculpen las molestias.
         </p>
 
         <a href="https://github.com/" target="_blank">
