--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
           Cisco Networking Academy, un recurso gratuito que siempre recomendaré.
           <br />
           Desde entonces no he parado de estudiar y aprender con la ayuda de
-          otros como Cybrary, TryHackMe, ISC2... <br /> Esta web hecha con mis conocimientos en programación está en construcción, le dedico más tiempo a formarme que a actualizarla, disculpen las molestias.
+          otros como Cybrary, TryHackMe, ISC2... <br />
+          Esta web hecha con mis conocimientos en programación está en
+          construcción, le dedico más tiempo a formarme que a actualizarla,
+          disculpen las molestias.
         </p>
 
         <a href="https://github.com/" target="_blank">
@@ -48,7 +51,9 @@
         <h3>Algunos de mis cursos y certificaciones</h3>
         <article class="course">
           <div class="title">
-            <h4>Analista Junior en Ciberseguridad // Cisco Networking Academy</h4>
+            <h4>
+              Analista Junior en Ciberseguridad // Cisco Networking Academy
+            </h4>
           </div>
           <div class="descrition">
             <p>
@@ -76,10 +81,10 @@
           </div>
           <div class="descrition">
             <p>
-              En Formación...Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur,
-              laudantium. Eveniet veniam repellat eos vero. Nisi consequatur
-              similique earum pppnulla optio, magnam impedit temporibus eos
-              vitae, eum voluptatem. Praesentium, quia!
+              En Formación...Lorem ipsum dolor sit amet consectetur adipisicing
+              elit. Tenetur, laudantium. Eveniet veniam repellat eos vero. Nisi
+              consequatur similique earum pppnulla optio, magnam impedit
+              temporibus eos vitae, eum voluptatem. Praesentium, quia!
             </p>
           </div>
         </article>
@@ -89,14 +94,14 @@
           </div>
           <div class="descrition">
             <p>
-              Preparando el examen...Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque
-              corrupti voluptate culpa tempora molestiae esse quidem, dicta
-              reprehenderit samet cum impedit, quas, reiciendis possimus
-              doloribus eaqueee enim. Tempora, possimus suscipit!
+              Preparando el examen...Lorem ipsum dolor sit amet consectetur,
+              adipisicing elit. Itaque corrupti voluptate culpa tempora
+              molestiae esse quidem, dicta reprehenderit samet cum impedit,
+              quas, reiciendis possimus doloribus eaqueee enim. Tempora,
+              possimus suscipit!
             </p>
           </div>
         </article>
-
 
         <article class="course">
           <div class="title">
