--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>CV - Jose M. Rodríguez</title>
+    <title>CV - Jose M. Rodríguez SOC Analyst // Cybersecurity Analyst</title>
     <meta name="description" content="simple CV created with HTML and CSS" />
     <meta name="author" content="Fly Nerd" />
     <link rel="icon" href="./img/favicon.ico" />
@@ -66,7 +66,7 @@
         </article>
         <article class="course">
           <div class="title">
-            <h4>SOC Level 1 // TryHackMe</h4>
+            <h4>SOC Analyst Level 1 // TryHackMe</h4>
           </div>
           <div class="descrition">
             <p>
@@ -77,7 +77,7 @@
             </p>
           </div>
           <div class="title">
-            <h4>SOC Level 1 // Cybrary</h4>
+            <h4>SOC Analyst // Cybrary</h4>
           </div>
           <div class="descrition">
             <p>
