--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>CV - Jose M. Rodríguez // SOC Analyst - Cybersecurity Analyst</title>
+    <title>CV - Jose María Rodríguez <br /> // SOC Analyst - Cybersecurity Analyst //</title>
     <meta name="description" content="simple CV created with HTML and CSS" />
     <meta name="author" content="Fly Nerd" />
     <link rel="icon" href="./img/favicon.ico" />
