--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>CV - Jose María Rodríguez <br /> // SOC Analyst - Cybersecurity Analyst //</title>
+    <title>CV - Jose María Rodríguez</title>
     <meta name="description" content="simple CV created with HTML and CSS" />
     <meta name="author" content="Fly Nerd" />
     <link rel="icon" href="./img/favicon.ico" />
@@ -21,7 +21,7 @@
       <div>
         <img src="./img/avatar.jpg" />
       </div>
-      <h1>Jose M. Rodríguez</h1>
+      <h1>Jose María Rodríguez <br /> // SOC Analyst - Cybersecurity Analyst //</h1>
       <section>
         <p>
           Hola! Soy Jose, bienvenido a mi cv online únicamente enfocado en
