--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div>
         <img src="./img/avatar.jpg" />
       </div>
-      <h1>Jose María Rodríguez <br /> // SOC Analyst - Cybersecurity Analyst //</h1>
+      <h1>Jose María Rodríguez <br /><hr> // SOC Analyst - Cybersecurity Analyst //</h1>
       <section>
         <p>
           Hola! Soy Jose, bienvenido a mi cv online únicamente enfocado en
