--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </article>
         <article class="course">
           <div class="title">
-            <h4>SOC Analyst Level 1 // TryHackMe</h4>
+            <h4>SOC Analyst Level 1 // TryHackMe [Top 3% TryHackMe]</h4>
           </div>
           <div class="descrition">
             <p>
