--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <article class="course">
           <div class="title">
             <h4>
-              Analista Junior en Ciberseguridad // Cisco Networking Academy
+              Analista Junior en Ciberseguridad <br />// Cisco Networking Academy
             </h4>
           </div>
           <div class="descrition">
@@ -66,7 +66,7 @@
         </article>
         <article class="course">
           <div class="title">
-            <h4>SOC Analyst Level 1 // TryHackMe [Top 3% TryHackMe]</h4>
+            <h4>SOC Analyst Level 1 <br />// TryHackMe [Top 3% TryHackMe]</h4>
           </div>
           <div class="descrition">
             <p>
@@ -77,7 +77,7 @@
             </p>
           </div>
           <div class="title">
-            <h4>SOC Analyst // Cybrary</h4>
+            <h4>SOC Analyst <br />// Cybrary</h4>
           </div>
           <div class="descrition">
             <p>
@@ -90,7 +90,7 @@
         </article>
         <article class="course">
           <div class="title">
-            <h4>Certified in Cybersecurity // ISC2</h4>
+            <h4>Certified in Cybersecurity <br />// ISC2</h4>
           </div>
           <div class="descrition">
             <p>
@@ -105,7 +105,7 @@
 
         <article class="course">
           <div class="title">
-            <h4>Fundamentos de Python 1 // Cisco Networking Academy</h4>
+            <h4>Fundamentos de Python 1 <br />// Cisco Networking Academy</h4>
           </div>
           <div class="descrition">
             <p>
@@ -119,7 +119,7 @@
         </article>
         <article class="course">
           <div class="title">
-            <h4>4Geeks Academy</h4>
+            <h4>full Stack Developer <br /> // 4Geeks Academy</h4>
           </div>
           <div class="descrition">
             <p>
