--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </header>
     <main>
       <section>
-        <h3>Algunos de mis cursos y certificaciones</h3>
+        <h3>cursos, estudios y certificaciones:</h3>
         <article class="course">
           <div class="title">
             <h4>
