--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
       <h1>Jose María Rodríguez <br /><hr> // SOC Analyst - Cybersecurity Analyst //</h1>
       <section>
         <p>
-          Hola! Soy Jose, bienvenido a mi cv online únicamente enfocado en
-          ciberseguridad, que iré actualizando según vaya adquiriendo más
+          Hola! Soy Jose. Bienvenido a mi cv online, que iré actualizando según vaya adquiriendo más
           experiencia y conocimientos. <br />
           Empecé en serio en este fascinante mundo en enero de 2023 gracias a
           Cisco Networking Academy, un recurso gratuito que siempre recomendaré.
@@ -34,7 +33,7 @@
           otros como Cybrary, TryHackMe, ISC2... <br />
           Esta web hecha con mis conocimientos en programación está en
           construcción, le dedico más tiempo a formarme que a actualizarla,
-          disculpen las molestias.
+          por eso aún está "en construcción...", disculpen las molestias. 😅
         </p>
 
         <a href="https://github.com/" target="_blank">
