--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           Desde entonces no he parado de estudiar y aprender con la ayuda de
           otros como Cybrary, TryHackMe, ISC2... <br />
           Esta web hecha con mis conocimientos en programación está en
-          construcción, le dedico más tiempo a formarme que a actualizarla,
+          evolucionando, le dedico más tiempo a formarme que a actualizarla,
           por eso aún está "en construcción...", disculpen las molestias. 😅
         </p>
 
