--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
           por eso aún está "en construcción...", disculpen las molestias. 😅
         </p>
 
-        <a href="https://github.com/" target="_blank">
+        <a href="https://github.com/JoseGeek78/" target="_blank">
           <i class="fab fa-github-alt"></i>
         </a>
 
-        <a href="https://www.linkedin.com//" target="_blank">
+        <a href="https://www.linkedin.com/in/jose-maria-rodriguez-mu%C3%B1oz/" target="_blank">
           <i class="fab fa-linkedin-in"></i>
         </a>
       </section>
